--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.0.1
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.1.0
 flake8==4.0.1
 drf-nested-routers==0.93.4
-requests == 2.26.0
+requests==2.26.0
